# CEIA-vpc2

./: .gitignore  02_vpc2-baseline-modelo-trashnet.ipynb  03_vpc2-yolo.ipynb  README.md  main.py  pyproject.toml  requirements.txt  vpc2-EDA-trashnet.ipynb
artifacts/: duplicates_exact_by_phash.csv  optuna_best_head.json
ceia-vpc2-tp/: main.py  pyproject.toml
yolo/runs/trashnet/train2/: args.yaml  results.csv
yolo/runs/trashnet/train3/: args.yaml  results.csv
yolo/runs/trashnet/yolo11s-cls.pt_tune/: best_hyperparameters.yaml  tune_results.csv
