[project]
name = "ceia-vpc2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "ipykernel>=6.30.1,<7.0.0",
    "numpy>=2,<2.3.0", 
    "pandas>=2.3.2,<3.0.0",
    "matplotlib>=3.10.6,<4.0.0",
    "seaborn>=0.13.2,<0.14.0",
    "scikit-learn>=1.7.2,<2.0.0",
    "jupyter>=1.1.1,<2.0.0",
    "tqdm>=4.67.1,<5.0.0",
    "opencv-python>=4.12.0.88,<5.0.0.0",
    "imagehash>=4.3.2,<5.0.0",
    "torch>=2.8.0,<3.0.0",
    "torchvision>=0.23.0,<0.24.0",
    "umap>=0.1.1,<0.2.0",
    "umap-learn>=0.5.9.post2,<0.6.0",
    "ipywidgets (==8.1.2)",
    "notebook (>=7.4.7,<8.0.0)"
]

[project.optional-dependencies]
cuda = [
    "torch>=2.8.0,<3.0.0",
    "torchvision>=0.23.0,<0.24.0"
]

[[tool.uv.index]]
name = "pytorch-cuda129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true